--- a/gb/23/9/17/n14075603.md
+++ b/gb/23/9/17/n14075603.md
@@ -11,52 +11,42 @@
 <p>自108课纲上路后，以“适性扬才、终身学习”为愿景，教育部指出，STEAM教育鼓励孩子从被动受教到主动创造、动手做，体验解决问题的执行力，与108课纲的精神相符合。教育部所属科教馆为国内重要的科学教育中心，以探索、体验、玩科学为核心理念，规划各式展览及教育活动。</p>
 <p>典礼中科教馆邀请今年暑假“STEM旋翼无人机”营队的小朋友们带来无人机表演，展现他们暑假在科教馆的学习成果。教育部表示，由于科教馆及亚利桑纳科学中心皆以推动全民科普为目标，而台北市和凤凰城也已缔为姐妹市，盼未来能为台美双方的科学教育带来崭新发展。◇</p>
 <p>责任编辑：郑桦</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/17/6/23/n9298708.md#1">台科教馆毒品展 学辨味道增警觉</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/6/n13753263.md#1">桃市访团出席2022美洲教育者年会  谈教育合作</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/5/n13796480.md#1">强化双语教育合作 教部与美国维州续签备忘录</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/8/n13798054.md#1">嘉市与加州洪堡郡教育厅签教育合作意向书</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/21/n14039683.md#1">台湾与罗德岛州签署新英格兰地区首个高等教育合作备忘录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074562.md#1">流感疫苗意愿书误植　疾管署说明今年版本两差异</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073822.md#1">伪造副教授正取结果 台监院弹劾嘉大前系主任</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073701.md#1">优化育儿环境 民团吁整合0到6岁一体化托育服务</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072286.md#1">技职生降38.5% 台教团盼提解方</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071599.md#1">台师资生赴肯亚、泰国 助推教育数位化</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103553.md#1">北科大教授宋裕祺 获国家产学大师奖</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103551.md#1">台法令引反弹 幼托团体 10/28上凯道</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101362.md#1">家长最关心十大教育议题 品格教育高于成绩</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101164.md#1">儿盟：108课纲压力大 台湾6成儿少学习疲劳</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098748.md#1">党产会进校园办座谈 台教长：教师常态研习</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/16/n10786224.md#1" target="_blank">老贫农：在大饥荒中人是怎样被活活饿死的？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977767.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(3) 骑向自由</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/20/2/22/n11888452.md#1" target="_blank">“土改”和“文革”时的离奇报应</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/7/22/n10581299.md#1" target="_blank">绝路逢生  台湾女子找到心灵的蓝天</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067845.md#1">【杨延昭传奇】乱世中的命定姻缘（中）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071125.md#1">【人物真相】尹锡悦 坚决抗共的亚洲政治强人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014354.md#1">南朝人的奇幻之旅 进入另外空间 看到了世外高人 知道了前朝秘辛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071134.md#1">【未解之谜】不爱江山爱美人？顺治之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067903.md#1">【杨延昭传奇】乱世中的命定姻缘（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074686.md#1">【拍案惊奇】习内阁成高危职业 李强被“销声”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14074887.md#1">【全球新闻】金正恩怕遭普京暗杀 防范画面流出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074711.md#1">【菁英论坛】李尚福失踪 对台政策临时转向</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073386.md#1">【中国观察】王沪宁画饼 习政策进死胡同</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073339.md#1">王友群：中共即将灭亡最重要的原因是什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073943.md#1">李尚福等接连“消失” 白宫记者会关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074253.md#1">婚前偕女友飞俄国古堡 徐新洋遵传统访女方家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074691.md#1">陆第一网红李子柒油管停更2年 新视频微博疯传</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14074019.md#1">周杰伦携昆凌为妈妈庆生 婆媳贴脸合照似母女</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073251.md#1">王宝强前经纪人宋喆刑满出狱 再引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073677.md#1">婚姻生活逾40年 丹佐华盛顿谈秘诀：承诺与信仰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071559.md#1">吃梨一定要吃这部位！抗癌护心防糖尿病 功效强大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068199.md#1">不让近视恶化！每天只花5分钟 改善视力很简单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073027.md#1">木制厨具6大好处 了解后你会爱不释手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071720.md#1">戒糖后更易减肥 身体发生10大惊人变化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074370.md#1">iPhone 15手机新功能 帮你找到朋友的位置</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105073.md#1">【时事金扫描】传普京心脏病发 俄辟谣被打假</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105062.md#1">【马克时空】美军增兵中东 第四代战机宝刀不老</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104204.md#1">破产3年尚积欠6千万 澎恰恰回首导演梦谈心境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/17/n14075603.htm">台科教馆携手亚利桑那科学中心 推STEAM教育</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075603.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
